added osx and ubuntu confilict-handle

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
-set -g default-terminal "screen-256color"   # use 256 colors
-set-option -g default-command "reattach-to-user-namespace -l bash"
+# use 256 colors
+set -g default-terminal "screen-256color"
+
+# Mac OS X fix for pbcopy, pbpaste, and launchctl
+set-option -g default-command "safe-reattach-to-user-namespace -l $SHELL"C
 
 # key bindings for horizontal and vertical panes
 unbind %
