put everything in .tmux directory for configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,4 +39,4 @@ unbind-key l
 bind-key l select-pane -R
 
 # Set a Ctrl-b shortcut for reloading your tmux config
-bind-key r source-file ~/.tmux.conf \; display "Config reloaded!"
+bind-key r source-file ~/.tmux/tmux.conf \; display "Config reloaded!"
