fixed default path problem and put install script

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@
 set -g default-terminal "screen-256color"
 
 # Mac OS X fix for pbcopy, pbpaste, and launchctl
-set-option -g default-command "safe-reattach-to-user-namespace -l $SHELL"C
+set-option -g default-command "sh ~/.tmux/safe-reattach-to-user-namespace -l $SHELL"
 
 # key bindings for horizontal and vertical panes
 unbind %
@@ -29,14 +29,14 @@ set -g pane-active-border-fg '#bbbbbb'
 set -g pane-border-fg '#555555'
 
 # Remap window navigation to vim
-unbind-key j
-bind-key j select-pane -D
-unbind-key k
-bind-key k select-pane -U
-unbind-key h
-bind-key h select-pane -L
-unbind-key l
-bind-key l select-pane -R
+unbind C-j
+bind j select-pane -D
+unbind C-k
+bind k select-pane -U
+unbind C-h
+bind h select-pane -L
+unbind C-l
+bind l select-pane -R
 
 # Set a Ctrl-b shortcut for reloading your tmux config
-bind-key r source-file ~/.tmux/tmux.conf \; display "Config reloaded!"
+bind-key r source-file ~/.tmux.conf \; display "Config reloaded!"
