--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,6 @@
 # use 256 colors
 set -g default-terminal "screen-256color"
 
-# Mac OS X fix for pbcopy, pbpaste, and launchctl
-set-option -g default-command "sh ~/.tmux/safe-reattach-to-user-namespace -l $SHELL"
-
 # key bindings for horizontal and vertical panes
 unbind %
 bind-key | split-window -h
@@ -40,3 +37,6 @@ bind l select-pane -R
 
 # Set a Ctrl-b shortcut for reloading your tmux config
 bind-key r source-file ~/.tmux.conf \; display "Config reloaded!"
+
+# Mac OS X fix for pbcopy, pbpaste, and launchctl
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
