set default window path

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,11 +6,14 @@ unbind %
 bind-key | split-window -h
 bind-key - split-window -v
 
+# Default path
+bind c new-window -c "#{pane_current_path}"
+
 # Rename your terminals
 set -g set-titles on
 set -g set-titles-string '#(whoami)::#H::#(curl ipecho.net/plain;echo)::#S'
 
-# status bar customization
+# Status bar customization
 set -g status-utf8 on
 set -g status-bg '#000000'
 set -g status-fg default
